--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "validate": "svelte-check"
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.10",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
