--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@openzeppelin/contracts": "^3.3.0",
     "dateformat": "^4.4.1",
     "sirv-cli": "^1.0.0",
+    "svelte-spa-router": "^3.1.0",
     "web3-react": "^5.0.5",
     "web3.js-browser": "^0.2.0"
   }
