--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "npm run typechain:src && rollup -c -w",
     "start": "sirv public",
     "validate": "svelte-check",
-    "typechain": "typechain --target ethers-v5 \"build/**/*.json\" --outDir src/types"
+    "truffle:test": "truffle test",
+    "typechain:src": "typechain --target web3-v1 \"build/**/*.json\" --outDir src/types",
+    "typechain:test": "typechain --target truffle-v5 \"build/**/*.json\" --outDir test/types"
   },
   "devDependencies": {
+    "@ethersproject/contracts": "^5.0.9",
     "@openzeppelin/test-helpers": "^0.5.10",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.0",
-    "@typechain/ethers-v5": "^5.0.0",
+    "@typechain/truffle-v5": "^4.0.1",
+    "@typechain/web3-v1": "^2.0.0",
+    "@types/mocha": "^8.2.0",
+    "ethers": "^5.0.26",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
