--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
+    "svelte-mui": "^0.3.3-7",
     "svelte-preprocess": "^4.0.0",
     "truffle": "^5.1.61",
     "tslib": "^2.0.0",
